Added colors for entire website

--- a/public/src/resources/templates/visualizations/value.html
+++ b/public/src/resources/templates/visualizations/value.html
@@ -1,6 +1,6 @@
 <div class="content">
     <p>
-        <span class="value">
+    <span class="value" style="color:<%- $.template(templates.color, colorData) %>">
         <%- $.template(templates.value, data) %>
         </span>
     </p>
