--- a/public/src/resources/templates/visualizations/bar.html
+++ b/public/src/resources/templates/visualizations/bar.html
@@ -1,6 +1,6 @@
 <% _.each(data, function(st) { %>
 <div class="bar" style="width: <%- Math.floor(100/data.length) %>%">
-    <div class="bar-inner" style="height: <%- st.percents.max.toFixed(2) %>%;">
+    <div class="bar-inner" style="height: <%- st.percents.max.toFixed(2) %>%; background:<%- $.template(templates.color, colorData) %>">
         <span class="percent"><%- st.percents.total.toFixed(1) %>%</span>
     </div>
     <div class="bar-label">
