Extremes and fix for color defaults

--- a/public/src/resources/stylesheets/main.less
+++ b/public/src/resources/stylesheets/main.less
@@ -20,6 +20,7 @@
 @import "visualizations/value.less";
 @import "visualizations/map.less";
 @import "visualizations/table.less";
+@import "visualizations/extremes.less";
 
 * {
     -webkit-overflow-scrolling: touch;
