--- a/public/src/resources/templates/visualizations/value.html
+++ b/public/src/resources/templates/visualizations/value.html
@@ -2,7 +2,7 @@
     <p>
     <span class="value" style="color:<%- $.template(templates.color, colorData) %>">
         <%- $.template(templates.value, data) %>
-        </span>
+u       </span>
     </p>
     <p class="value-label"><%- $.template(templates.label, data) %></p>
 </div>
